--- a/views/layout.erb
+++ b/views/layout.erb
@@ -4,11 +4,33 @@
     <meta charset="utf-8">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css">
     <link rel="stylesheet" href="/css/styles.css">
-    <title>Unique-Shoe-Store-Name</title>
+    <title>Ye Olde Shoes Co.</title>
   </head>
   <body>
-    <nav class="navbar navbar-dark bg-secondary sticky-top mb-4">
-      <a class="navbar-brand" href="/">Unique-Shoe-Store-Name</a>
+    <nav class="navbar navbar-expand-lg navbar-dark bg-secondary sticky-top mb-4">
+      <a class="navbar-brand" href="/">Ye Olde Shoe Co.</a>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNav">
+        <ul class="navbar-nav">
+          <li class="nav-item">
+            <a class="nav-link" href="/">Home</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/stores">Stores</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/brands">Brands</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">About</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">Contact</a>
+          </li>
+        </ul>
+      </div>
     </nav>
     <div id="main" class="container">
     <%= yield %>
