--- a/views/index.erb
+++ b/views/index.erb
@@ -1,5 +1,37 @@
-<div class="row justify-content-md-center mb-4">
+<div class="row justify-content-md-center">
   <div class="col-12">
-    
+    <div class="card mt-4">
+      <div class="card-body">
+        <h1 class="text-center">Ye Olde Shoe Co.</h1>
+        <h5 class="text-center">Est. 1909</h5>
+        <div class="row mb-3">
+          <div class="col-lg-4 col-sm-12 mb-sm-2">
+            <img src="/img/shoe2.jpg" alt="a shoe 2" class="img-fluid rounded mx-auto d-block" alt="Responsive image" style="height: 300px;"/>
+          </div>
+          <div class="col-lg-4 col-sm-12 mb-sm-2">
+            <img src="/img/shoe.jpg" alt="a shoe" class="img-fluid rounded mx-auto d-block" alt="Responsive image" style="height: 300px;"/>
+          </div>
+          <div class="col-lg-4 col-sm-12 mb-sm-2">
+            <img src="/img/shoe3.jpg" alt="a shoe 3" class="img-fluid rounded mx-auto d-block" alt="Responsive image" style="height: 300px;"/>
+          </div>
+        </div>
+        <p class="text-justify">
+          Staple court shoe chunky mid block heel almond toe flexible rubber sole simple chic ideal handmade metallic detail. Effortless comfortable full leather lining eye-catching unique detail to the toe low 'cut-away' sides clean and sleek. Workwear bow detailing a slingback buckle strap stiletto heel timeless go-to shoe sophistication slipper shoe. Workwear bow detailing a slingback buckle strap stiletto heel timeless go-to shoe sophistication slipper shoe. Effortless comfortable full leather lining eye-catching unique detail to the toe low 'cut-away' sides clean and sleek.
+        </p>
+        <p class="text-justify">
+          Staple court shoe chunky mid block heel almond toe flexible rubber sole simple chic ideal handmade metallic detail. Bow detail metallic eyelets leather lining luxurious finish classic courts formal slingback square toe contrasting cap. Effortless comfortable full leather lining eye-catching unique detail to the toe low 'cut-away' sides clean and sleek. Staple court shoe chunky mid block heel almond toe flexible rubber sole simple chic ideal handmade metallic detail. Effortless comfortable full leather lining eye-catching unique detail to the toe low 'cut-away' sides clean and sleek.
+          Lace up fastening bow detailing high stiletto heel leather lining beautiful lace upper elegant peep toe t-bar strap. Workwear bow detailing a slingback buckle strap stiletto heel timeless go-to shoe sophistication slipper shoe. Flats elegant pointed toe design cut-out sides luxe leather lining versatile shoe must-have new season glamorous. Polished finish elegant court shoe work duty stretchy slingback strap mid kitten heel this ladylike design. Flats elegant pointed toe design cut-out sides luxe leather lining versatile shoe must-have new season glamorous.
+        </p>
+        <p class="text-justify">
+          Stiletto courts special occasion glossy embellished upper peep toe high heel twiste pretty lace detailing sultry finish. Foam padding in the insoles leather finest quality staple flat slip-on design pointed toe off-duty shoe. Staple court shoe chunky mid block heel almond toe flexible rubber sole simple chic ideal handmade metallic detail. Foam padding in the insoles leather finest quality staple flat slip-on design pointed toe off-duty shoe. Staple court shoe chunky mid block heel almond toe flexible rubber sole simple chic ideal handmade metallic detail.
+        </p>
+        <p class="text-justify">
+          Flats elegant pointed toe design cut-out sides luxe leather lining versatile shoe must-have new season glamorous. Suede fabric pointed toe stylish cut front low heel sharp on-trend toe point raised heel drop sides unique silhouette. Flats elegant pointed toe design cut-out sides luxe leather lining versatile shoe must-have new season glamorous. Foam padding in the insoles leather finest quality staple flat slip-on design pointed toe off-duty shoe. Workwear bow detailing a slingback buckle strap stiletto heel timeless go-to shoe sophistication slipper shoe.
+        </p>
+        <p class="text-justify">
+          Effortless comfortable full leather lining eye-catching unique detail to the toe low 'cut-away' sides clean and sleek. Effortless comfortable full leather lining eye-catching unique detail to the toe low 'cut-away' sides clean and sleek. Foam padding in the insoles leather finest quality staple flat slip-on design pointed toe off-duty shoe. Flats elegant pointed toe design cut-out sides luxe leather lining versatile shoe must-have new season glamorous. Stiletto courts special occasion glossy embellished upper peep toe high heel twiste pretty lace detailing sultry finish.
+        </p>
+      </div>
+    </div>
   </div>
 </div>
