--- a/views/brand_index.erb
+++ b/views/brand_index.erb
@@ -1,24 +1,38 @@
 <div class="row justify-content-md-center">
   <div class="col-6">
-    <div class="card mt-4 center-text" style="padding:20px;">
-      <h3>Add a Brand to the System</h3>
-      <form action="/brand/new" method="post">
-        <div class="form-group">
-          <label for="name">Brand Name:</label>
-          <input class="form-control" type="text" name="name"/>
-        </div>
-        <label for="pricel">Price:</label>
-        <div class="input-group">
-          <span class="input-group-addon">$</span>
-          <input class="form-control" type="text" name="price"/>
-        </div><br>
-        <button type="submit" class="btn btn-outline-secondary btn-block">Save New Brand</button>
-      </form>
-      <% if @brands.any? %>
-        <% @brands.each do |brand| %>
-          <p><%= brand.name %> | <%= brand.price %>
-        <% end %>
-      <% end %>
+    <div class="card mt-4">
+      <div class="card-body">
+        <h2 class="card-title">Add a Brand to the System</h2>
+        <form action="/brand/new" method="post">
+          <div class="form-group row">
+            <label for="name" class="col-sm-3 col-form-label">Brand Name:</label>
+            <div class="col-sm-9">
+              <input class="form-control" type="text" name="name"/>
+            </div>
+          </div>
+          <div class="form-group row">
+            <label for="pricel" class="col-sm-3 col-form-label">Price:</label>
+            <div class="input-group col-sm-9">
+              <span class="input-group-addon">$</span>
+              <input class="form-control" type="text" name="price"/>
+            </div>
+          </div>
+          <button type="submit" class="btn btn-outline-secondary btn-block">Save New Brand</button>
+        </form>
+      </div>
     </div>
   </div>
 </div>
+<% if @brands.any? %>
+  <div class="row justify-content-md-center">
+    <div class="col-8">
+      <div class="card mt-4">
+        <div class="card-body">
+          <% @brands.each do |brand| %>
+            <p><%= brand.name %> | <%= brand.price %>
+          <% end %>
+        </div>
+      </div>
+    </div>
+  </div>
+<% end %>
