--- a/views/brand_index.erb
+++ b/views/brand_index.erb
@@ -11,7 +11,7 @@
             </div>
           </div>
           <div class="form-group row">
-            <label for="pricel" class="col-sm-3 col-form-label">Price:</label>
+            <label for="price" class="col-sm-3 col-form-label">Price:</label>
             <div class="input-group col-sm-9">
               <span class="input-group-addon">$</span>
               <input class="form-control" type="text" name="price"/>
@@ -39,7 +39,7 @@
                 <th>Price</th>
                 <th># of Store Stocking</th>
                 <th></th>
-                <th></th>
+                <!-- <th></th> -->
                 <th></th>
               </tr>
             </thead>
@@ -55,11 +55,11 @@
                       <button class="btn btn-info btn-block" type="submit">View Stores</button>
                     </form>
                   </td>
-                  <td style="text-align: center;">
+                  <!-- <td style="text-align: center;">
                     <a href="/brand/update/<%= brand.id %>">
                       <button class="btn btn-warning btn-block" type="button">Edit brand</button>
                     </a>
-                  </td>
+                  </td> -->
                   <td style="text-align: center;">
                     <form action="/brand/delete/<%= brand.id %>" method="post">
                       <input name="_method" type="hidden" value="delete">
