--- a/views/store_index.erb
+++ b/views/store_index.erb
@@ -21,7 +21,7 @@
     <% if @stores.any? %>
       <div class="card mt-4">
         <div class="card-header bg-primary text-white">
-          Active Stores (<%= @stores.count %>)
+          <span style="font-size:18px">Active Stores (<%= @stores.count %>)</span>
         </div>
         <div class="card-body">
           <table class="table table-hover table-bordered" style="margin-bottom:0;">
@@ -42,9 +42,9 @@
                   <td class="align-middle"><%= store.name %></td>
                   <td class="align-middle"><%= store.brands.count %></td>
                   <td style="text-align: center;">
-                    <form action="/store/brands/<%= store.id %>" method="post">
-                      <button class="btn btn-info btn-block" type="submit">View Brands</button>
-                    </form>
+                    <a href="/store/brands/<%= store.id %>">
+                      <button class="btn btn-info btn-block" type="button">Add/View Brands</button>
+                    </a>
                   </td>
                   <td style="text-align: center;">
                     <a href="/store/update/<%= store.id %>">
