add callback to check for name uniqueness and format the number to an acceptable type

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -4,6 +4,9 @@ body {
   background-size: cover;
   font-family: 'Source Sans Pro', sans-serif;
 }
+a:hover {
+  text-decoration: none !important;
+}
 .bg-secondary {
   background-color: #123652 !important;
 }
