--- a/views/store_brands.erb
+++ b/views/store_brands.erb
@@ -72,7 +72,7 @@
                 <tr class="table-light">
                   <td class="align-middle"><%= brand.id %></td>
                   <td class="align-middle"><%= brand.name %></td>
-                  <td class="align-middle"><%= brand.price %></td>
+                  <td class="align-middle">$<%= brand.price %></td>
                   <td style="text-align: center;">
                     <form action="/store/brands/<%= @store.id %>/remove/<%= brand.id %>" method="post">
                       <input name="_method" type="hidden" value="delete">
