--- a/views/layout.erb
+++ b/views/layout.erb
@@ -14,8 +14,8 @@
       </button>
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav">
-          <li class="nav-item">
-            <a class="nav-link" href="/">Home</a>
+          <li class="nav-item active">
+            <a class="nav-link" href="/">Home <span class="sr-only">(current)</span></a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="/stores">Stores</a>
@@ -24,10 +24,7 @@
             <a class="nav-link" href="/brands">Brands</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">About</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">Contact</a>
+            <a class="nav-link" href="/sign_out">Sign Out</a>
           </li>
         </ul>
       </div>
