--- a/views/sign_in.erb
+++ b/views/sign_in.erb
@@ -1,9 +1,23 @@
-<h1>Sign in</h1>
-<% if @error %>
-  <p class="error"><%= @error %></p>
-<% end %>
-<form action="/sign_in" method="post">
-  <input name="username" placeholder="Username" />
-  <input name="pass" type="password" placeholder="Password" />
-  <button type="submit" class="btn btn-success">Login</button>
-</form>
+<div class="row justify-content-md-center">
+  <div class="col-lg-4">
+    <div class="card mt-4">
+      <div class="card-body">
+        <h1>Sign in</h1>
+        <% if @error %>
+          <div class="alert alert-danger" role="alert">
+            <%= @error %>
+          </div>
+        <% end %>
+        <form action="/sign_in" method="post">
+          <div class="form-group">
+            <input name="username" placeholder="Username" class="form-control form-control-lg"/>
+          </div>
+          <div class="form-group">
+            <input name="pass" type="password" placeholder="Password" class="form-control form-control-lg"/>
+          </div>
+          <button type="submit" class="btn btn-outline-success btn-block btn-lg">Login</button>
+        </form>
+      </div>
+    </div>
+  </div>
+</div>
