make the entire site mobile friendly with responisve table, js bootstrap for dropdown menu on mobile devices, and pages that fill the screen when sm

--- a/views/index.erb
+++ b/views/index.erb
@@ -1,6 +1,6 @@
 <div class="row justify-content-md-center">
   <div class="col-12">
-    <div class="card mt-4">
+    <div class="card mt-lg-4 mt-sm-2">
       <div class="card-body">
         <h1 class="text-center">Ye Olde Shoe Co.</h1>
         <h5 class="text-center">Est. 1909</h5>
