--- a/views/brand_index.erb
+++ b/views/brand_index.erb
@@ -1,5 +1,5 @@
 <div class="row justify-content-md-center">
-  <div class="col-6">
+  <div class="col-lg-6 col-sm-12">
     <% if @new_brand %>
       <div class="alert alert-danger" role="alert">
         <% @new_brand.errors().full_messages().each() do |message| %>
@@ -10,7 +10,7 @@
   </div>
 </div>
 <div class="row justify-content-md-center">
-  <div class="col-6">
+  <div class="col-lg-6 col-sm-12">
     <div class="card mt-4">
       <div class="card-body">
         <h2 class="card-title">Add a Brand to the System</h2>
@@ -42,7 +42,7 @@
           Active brands (<%= @brands.count %>)
         </div>
         <div class="card-body">
-          <table class="table table-hover table-bordered" style="margin-bottom:0;">
+          <table class="table table-hover table-bordered table-responsive" style="margin-bottom:0;">
             <thead class="thead" style="background-color:#A3B8C8;">
               <tr>
                 <th>Brand ID</th>
