--- a/views/brand_stores.erb
+++ b/views/brand_stores.erb
@@ -6,7 +6,7 @@
       </div>
       <div class="card-body">
         <% if @brand.stores.any? %>
-          <table class="table table-hover table-bordered" style="margin-bottom:0;">
+          <table class="table table-hover table-bordered table-responsive" style="margin-bottom:0;">
             <thead class="thead" style="background-color:#A3B8C8;">
               <tr>
                 <th>Store ID</th>
