--- a/views/store_brands.erb
+++ b/views/store_brands.erb
@@ -58,7 +58,7 @@
           Brands at <%= @store.name %> (<%= @store.brands.count %>)
         </div>
         <div class="card-body">
-          <table class="table table-hover table-bordered" style="margin-bottom:0;">
+          <table class="table table-hover table-bordered table-responsive" style="margin-bottom:0;">
             <thead class="thead" style="background-color:#A3B8C8;">
               <tr>
                 <th>Brand ID</th>
