--- a/views/store_index.erb
+++ b/views/store_index.erb
@@ -1,5 +1,5 @@
 <div class="row justify-content-md-center">
-  <div class="col-6">
+  <div class="col-lg-6 col-sm-12">
     <% if @new_store %>
       <% @new_store.errors().full_messages().each() do |message| %>
         <div class="alert alert-danger" role="alert">
@@ -10,7 +10,7 @@
   </div>
 </div>
 <div class="row justify-content-md-center mb-4">
-  <div class="col-6">
+  <div class="col-lg-6 col-sm-12">
     <div class="card mt-4">
       <div class="card-body">
         <h2 class="card-title">Add a Store to the System</h2>
@@ -28,14 +28,14 @@
   </div>
 </div>
 <div class="row justify-content-md-center">
-  <div class="col">
+  <div class="col-12">
     <% if @stores.any? %>
       <div class="card mt-4">
         <div class="card-header bg-primary text-white">
           <span style="font-size:18px">Active Stores (<%= @stores.count %>)</span>
         </div>
         <div class="card-body">
-          <table class="table table-hover table-bordered" style="margin-bottom:0;">
+          <table class="table table-hover table-bordered table-responsive" style="margin-bottom:0;">
             <thead class="thead" style="background-color:#A3B8C8;">
               <tr>
                 <th>Store ID</th>
