correct a header on the brands index to match the header on the store index

--- a/views/brand_index.erb
+++ b/views/brand_index.erb
@@ -39,7 +39,7 @@
     <% if @brands.any? %>
       <div class="card mt-4">
         <div class="card-header bg-primary text-white">
-          Active brands (<%= @brands.count %>)
+          <span style="font-size:18px">Active Brands (<%= @brands.count %>)</span>
         </div>
         <div class="card-body">
           <table class="table table-hover table-bordered table-responsive" style="margin-bottom:0;">
